# jeopardy_gleam

./: .gitignore  README.md  gleam.toml  index.html  manifest.toml
.github/workflows/: python-lint-and-format.yaml  test.yml
backend/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
backend/backend/: server.py
backend/src/: server.py  server2.py
frontend/: README.md  gleam.toml  index.html  manifest.toml
frontend/src/: config.gleam  jeopardy.gleam  model.gleam
frontend/src/shared/: json_decoders.gleam  shared.gleam
frontend/src/views/: jeopardy_table.gleam  modals.gleam  site_footer.gleam
gamefiles/: ae.json  answers.json  de_generic.json  example.json  product_owners_de.json
src/: helper.gleam  jeopardy.gleam  jeopardy_gleam.gleam  json_decoders.gleam  main.gleam  model.gleam
src/decoders/: json_decoders.gleam
src/views/: modals.gleam
src/views/jeopardy_grid/: jeopardy_table.gleam  site_footer.gleam
