[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marlon Schultz <m.schultz@ampeersenergy.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tornado = "^6.4.1"
gpiozero = "^2.0.1"
lgpio = "^0.2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
