[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Marlon Schultz <somespam@somewhere.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tornado = "^6.4.2"
gpiozero = "^2.0.1"
lgpio = { version = "^0.2.2.0", optional = true }
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[tool.poetry.extras]
gpio-support = ["lgpio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".venv", "venv"]
